# Folderr-AI

./: .gitignore  .pre-commit-config.yaml  README.md  deployzip.sh  docker-compose.beta.yml  docker-compose.prod.yml  docker-compose.yml  fmtl  init-letsencrypt-prod.sh  init-letsencrypt.sh  pyproject.toml  setup.cfg
app/: Dockerfile  Dockerfile.beta  Dockerfile.prod  Makefile  README.md  appconfig.sample.env  compose.yml  entrypoint.beta.sh  entrypoint.prod.sh  entrypoint.sh  manage.py  openapi-schema.yml  requirements.txt  run-dev-server.sh  run-shell.sh
app/api/: permissions.py  serializers.py  tasks.py  urls.py  views.py
app/assetchat/: ai_training.py  apps.py  common.py  document_chat.py  file_deletion.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
app/backend/: __init__.py  aws_setup.py  constants.py  exceptions.py  settings.py  urls.py
app/core/: admin.py  email.py  managers.py  models.py  permissions.py  revenue_cat.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
app/expenses/: models.py  urls.py
app/filemanager/: __init__.py  admin.py  apps.py  email.py  models.py  pagination.py  permissions.py  serializers.py  (+5 more)
command-runners/: folderr-create-task-reminders.sh  folderr-repeat-tasks.sh  folderr-reset-user-resource-usage.sh  folderr-sync-user-customer.sh
nginx/: nginx.conf
nginxbeta/: nginx.conf
systemd/: folderr-celery.service  folderr-create-task-reminders.service  folderr-create-task-reminders.timer  folderr-repeat-tasks.service  folderr-repeat-tasks.timer  folderr-reset-user-resource-usage.service  folderr-reset-user-resource-usage.timer  folderr-sync-user-customer.service  folderr-sync-user-customer.timer  folderr.service
(+220 files in other folders)
