[tool.isort]
profile = "black"

[tool.coverage.run]
plugins = [
    'django_coverage_plugin'
]

[tool.poetry]
name = "folderr"
version = "0.1.0"
description = ""
authors = ["Josh Karamuth <hello@joshkaramuth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.25"
celery = "^5.3.1"
flower = "^2.0.0"
django = "~4.0"
django-cors-headers = "^4.2.0"
djangorestframework = "^3"
rest-framework-generic-relations = "^2.1.0"
djangorestframework-simplejwt = "^5.2.2"
pillow = "^9"
psycopg2 = "^2.9.7"
facebook-sdk = "^3.1.0"
pdf2image = "^1.16.3"
django-extensions = "^3.2.3"
requests = "^2.31.0"
pyyaml = "^6.0.1"
uritemplate = "^4.1.1"
whitenoise = "^6.5.0"
redis = "^4.6.0"
html2text = "^2020.1.16"
django-ckeditor = "^6.7.0"
dj-stripe = "^2.8.1"
django-recurrence = "^1.11.1"
django-colorfield = "^0.9.0"
bleach = "^6.0.0"
pyotp = "^2.9.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.1.0"}
python-magic = "^0.4.27"
pillow-heif = "^0.13.0"
preview-generator = {extras = ["all"], version = "^0.29"}
langchain = "^0.0.263"
nltk = "^3.8.1"
pgvector = "^0.2.1"
openai = "^0.27.8"
tiktoken = "^0.4.0"
unstructured = {extras = ["local-inference"], version = "^0.9.2"}
django-environ = "^0.10.0"
torch = "2.0.0"
pymupdf = "^1.22.5"


[tool.poetry.group.prod.dependencies]
django-storages = "^1.13.2"
gunicorn = "^21.2.0"
django-anymail = {extras = ["amazon-ses"], version = "^10.1"}


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
numpy = "^1.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
